--- a/app/login/login.css
+++ b/app/login/login.css
@@ -54,3 +54,13 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+.span{
+
+    font-size:13px;
+    margin-top: 5px;
+}
+.span a{
+    text-decoration: none;
+    color: blueviolet;
+}
