--- a/app/dashboard/customers/add/adduser.module.css
+++ b/app/dashboard/customers/add/adduser.module.css
@@ -33,8 +33,9 @@
   .form button{
     width: 100%;
     padding: 30px;
-    background-color: teal;
-    color: var(--text);
+    background-color: blue;
+    color: white;
+    font-size: 1.5rem;
     border: none;
     border-radius: 5px;
     cursor: pointer;
