--- a/app/dashboard/customers/customers.module.css
+++ b/app/dashboard/customers/customers.module.css
@@ -1,5 +1,22 @@
+/* CustomersPage.module.css */
+.customersTable {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.customersTable th, .customersTable td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.customersTable th {
+  background-color: #f2f2f2;
+}
+
 .container{
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
     padding: 20px;
     border-radius: 10px;
     margin-top: 20px;
