--- a/app/register/register.css
+++ b/app/register/register.css
@@ -40,7 +40,12 @@ input {
     border-radius: 4px;
 }
 
-
+.avatarUploader{
+    padding: 10px;
+    margin: 5px 0 15px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 button {
     background-color: #4caf50;
     color: #fff;
